test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_labels/extra_credit/goto_global_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(x)
  =
  const int(10)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  goto
  identifier(x)
  ;
  return
  const int(0)
  ;
  }
